base/example-from-docs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xyzzy
spec:
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: xyzzy
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
