base/example-from-docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-xyzzy
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/instance: xyzzy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/instance: xyzzy
    spec:
      containers:
      - name: nginx
        image: git.app.uib.no:4567/itpublic/dockerimages/nginx-unprivileged/nginxinc/nginx-unprivileged:uib-v0.0.0
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP

        # RAIL requires us to specify how resource hungry each container is
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
          limits:
            cpu: 500m
            memory: 100Mi

        # This states the defaults for the securityContext and will get rid of
        # the warning that you should set these values.  These values can not be
        # set at the Pod-level, so they need to be specified here.
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type:
              RuntimeDefault
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-xyzzy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/instance: xyzzy
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: http
    from:
